fix: scrolling spacing

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   h1, h2, h3, h4, h5, h6 {
     @apply font-display;
   }
+
+  section[id] {
+    scroll-margin-top: 5rem;
+  }
 }
 
 
